force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <description
  >Individual questions that belong to a questionnaire, used to assess Jungian personality types.</description>
    <label>Question</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>