force-app/main/default/objects/Question__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description
  >Determines the display sequence of questions within the questionnaire.</description>
    <inlineHelpText
  >Enter a number to control the order in which questions appear (e.g., 1, 2, 3).</inlineHelpText>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>