force-app/main/default/objects/Question__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <description
  >The text content of the question displayed to users.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Enter the question text that will be displayed to users taking the assessment.</inlineHelpText>
    <label>Question Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>